<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/al3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/allo"
            android:id="@+id/imageview"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/lightGrey" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/lightGrey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_password"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:layout_gravity="right"
            android:gravity="right"
            android:padding="5dp"
            android:textSize="19sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clicktosignup"
            android:text="@string/click_to_sign_up"
            android:textColor="@color/white"
            android:layout_gravity="right"
            android:gravity="right"
            android:padding="5dp"
            android:textSize="19sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/signin"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/design_default_color_secondary_variant"
                android:padding="15dp"
                android:text="@string/sign_in"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/google"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_google"
                android:padding="15dp"
                android:text="Google"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/signupphone"
            android:text="@string/sign_up_with_phone"
            android:textColor="@color/white"
            android:textSize="19sp"/>

    </LinearLayout>
</LinearLayout>
